Fixed scrolling issue in jstree - horizontal scroll bar was causing vertical scroll bar to account for space taken by horizontal scroll bar.

--- a/TabRepository/wwwroot/css/site.css
+++ b/TabRepository/wwwroot/css/site.css
@@ -251,3 +251,8 @@ textarea {
 .placeholder {
     height: 75px;
 }
+
+#jstree {
+    overflow-y: auto;
+    overflow-x: auto;
+}
